Bug 103137 - [12/13 Regression] ICE in gfc_simplify_transpose, at fortran/simplify.c:8181 since r12-4967-gbcf3728abe848888
Summary: [12/13 Regression] ICE in gfc_simplify_transpose, at fortran/simplify.c:8181 ...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: 12.0
: P4 normal
Target Milestone: 10.5
Assignee: Not yet assigned to anyone
URL:
Keywords: ice-on-invalid-code
Depends on:
Blocks:
 
Reported: 2021-11-08 18:36 UTC by G. Steinmetz
Modified: 2022-07-03 20:31 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2021-11-08 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description G. Steinmetz 2021-11-08 18:36:51 UTC
Changed between 20211031 and 20211107 :
(follow-up of pr102715)


$ cat z1.f90
program p
   type t
      integer :: n
   end type
   type(t), parameter :: a(4) = [t(1), t(2), t(3), t(4)]
   class(t), parameter :: b(2,2) = reshape(a, [2,2])
   type(t), parameter :: c(2,2) = transpose(b)
end


$ gfortran-12-20211031 -c z1.f90
z1.f90:6:32:

    6 |    class(t), parameter :: b(2,2) = reshape(a, [2,2])
      |                                1
Error: CLASS variable 'b' at (1) cannot have the PARAMETER attribute


$ gfortran-12-20211107 -c z1.f90
f951: internal compiler error: Segmentation fault
0xd4f7bf crash_signal
        ../../gcc/toplev.c:322
0x82edf3 gfc_simplify_transpose(gfc_expr*)
        ../../gcc/fortran/simplify.c:8181
0x7aa89a do_simplify
        ../../gcc/fortran/intrinsic.c:4658
0x7b52ea gfc_intrinsic_func_interface(gfc_expr*, int)
        ../../gcc/fortran/intrinsic.c:5051
0x808bec resolve_unknown_f
        ../../gcc/fortran/resolve.c:2972
0x808bec resolve_function
        ../../gcc/fortran/resolve.c:3329
0x808bec gfc_resolve_expr(gfc_expr*)
        ../../gcc/fortran/resolve.c:7166
0x79a754 gfc_reduce_init_expr(gfc_expr*)
        ../../gcc/fortran/expr.c:3130
0x79d620 gfc_match_init_expr(gfc_expr**)
        ../../gcc/fortran/expr.c:3178
0x787bf4 variable_decl
        ../../gcc/fortran/decl.c:3004
0x787bf4 gfc_match_data_decl()
        ../../gcc/fortran/decl.c:6297
0x7f12c3 match_word
        ../../gcc/fortran/parse.c:67
0x7f12c3 decode_statement
        ../../gcc/fortran/parse.c:378
0x7f2d0a next_free
        ../../gcc/fortran/parse.c:1388
0x7f2d0a next_statement
        ../../gcc/fortran/parse.c:1620
0x7f442b parse_spec
        ../../gcc/fortran/parse.c:4159
0x7f779c parse_progunit
        ../../gcc/fortran/parse.c:6170
0x7f8a71 gfc_parse_file()
        ../../gcc/fortran/parse.c:6715
0x845d3f gfc_be_parse_file
        ../../gcc/fortran/f95-lang.c:216
Comment 1 anlauf 2021-11-08 20:50:03 UTC
Naive patch:

diff --git a/gcc/fortran/simplify.c b/gcc/fortran/simplify.c
index d675f2c3aef..a4fe0c3366d 100644
--- a/gcc/fortran/simplify.c
+++ b/gcc/fortran/simplify.c
@@ -8174,6 +8177,9 @@ gfc_simplify_transpose (gfc_expr *matrix)
 
   gcc_assert (matrix->rank == 2);
 
+  if (matrix->shape == NULL)
+    return NULL;
+
   result = gfc_get_array_expr (matrix->ts.type, matrix->ts.kind,
                               &matrix->where);
   result->rank = 2;
Comment 2 anlauf 2021-11-08 22:10:40 UTC
After playing with the Intel compiler, which accepts the testcase, I start
to think the code could actually be valid F2018.

At least I cannot find text in the F2018 standard prohibiting PARAMETER
for polymorphic variables.

So while the patch in comment#1 fixes the regression (ICE), it is far from
complete.
Comment 3 Martin Liška 2021-11-09 08:32:32 UTC
Started with r12-4967-gbcf3728abe848888.
Comment 4 GCC Commits 2021-11-10 19:42:37 UTC
The master branch has been updated by Harald Anlauf <anlauf@gcc.gnu.org>:

https://gcc.gnu.org/g:abc2f01914d6c4703de26c402fb579a9a2d0dba4

commit r12-5136-gabc2f01914d6c4703de26c402fb579a9a2d0dba4
Author: Harald Anlauf <anlauf@gmx.de>
Date:   Wed Nov 10 20:30:27 2021 +0100

    Fortran: avoid NULL pointer dereferences
    
    CLASS(), PARAMETER is not yet properly implemented in gfortran.  Using it
    in declarations could lead to subsequent NULL pointer dereferences during
    checking or simplification of expressions involving those CLASS variables.
    
    gcc/fortran/ChangeLog:
    
            PR fortran/103137
            PR fortran/103138
            * check.c (gfc_check_shape): Avoid NULL pointer dereference on
            missing ref.
            * simplify.c (gfc_simplify_cshift): Avoid NULL pointer dereference
            when shape not set.
            (gfc_simplify_transpose): Likewise.
Comment 5 GCC Commits 2021-11-11 20:17:55 UTC
The releases/gcc-11 branch has been updated by Harald Anlauf <anlauf@gcc.gnu.org>:

https://gcc.gnu.org/g:9ccc4f79f1a6dd08437e10db729694a744abb10a

commit r11-9235-g9ccc4f79f1a6dd08437e10db729694a744abb10a
Author: Harald Anlauf <anlauf@gmx.de>
Date:   Wed Nov 10 20:30:27 2021 +0100

    Fortran: avoid NULL pointer dereferences
    
    CLASS(), PARAMETER is not yet properly implemented in gfortran.  Using it
    in declarations could lead to subsequent NULL pointer dereferences during
    checking or simplification of expressions involving those CLASS variables.
    
    gcc/fortran/ChangeLog:
    
            PR fortran/103137
            PR fortran/103138
            * check.c (gfc_check_shape): Avoid NULL pointer dereference on
            missing ref.
            * simplify.c (gfc_simplify_cshift): Avoid NULL pointer dereference
            when shape not set.
            (gfc_simplify_transpose): Likewise.
    
    (cherry picked from commit abc2f01914d6c4703de26c402fb579a9a2d0dba4)
Comment 6 GCC Commits 2021-11-13 20:15:27 UTC
The releases/gcc-10 branch has been updated by Harald Anlauf <anlauf@gcc.gnu.org>:

https://gcc.gnu.org/g:651d84ae6cb4299ea91c701ff8d9a7c67e076570

commit r10-10272-g651d84ae6cb4299ea91c701ff8d9a7c67e076570
Author: Harald Anlauf <anlauf@gmx.de>
Date:   Wed Nov 10 20:30:27 2021 +0100

    Fortran: avoid NULL pointer dereferences
    
    CLASS(), PARAMETER is not yet properly implemented in gfortran.  Using it
    in declarations could lead to subsequent NULL pointer dereferences during
    checking or simplification of expressions involving those CLASS variables.
    
    gcc/fortran/ChangeLog:
    
            PR fortran/103137
            PR fortran/103138
            * check.c (gfc_check_shape): Avoid NULL pointer dereference on
            missing ref.
            * simplify.c (gfc_simplify_cshift): Avoid NULL pointer dereference
            when shape not set.
            (gfc_simplify_transpose): Likewise.
    
    (cherry picked from commit abc2f01914d6c4703de26c402fb579a9a2d0dba4)
Comment 7 G. Steinmetz 2021-11-15 18:24:30 UTC
Thank you very much for fixing this issue (and for the other ones).
Comment 8 Jakub Jelinek 2022-05-06 08:31:43 UTC
GCC 12.1 is being released, retargeting bugs to GCC 12.2.
Comment 9 GCC Commits 2022-06-30 19:01:50 UTC
The master branch has been updated by Harald Anlauf <anlauf@gcc.gnu.org>:

https://gcc.gnu.org/g:4c233cabbe388a6b8957c1507e129090e9267ceb

commit r13-1370-g4c233cabbe388a6b8957c1507e129090e9267ceb
Author: Harald Anlauf <anlauf@gmx.de>
Date:   Wed Jun 29 21:36:17 2022 +0200

    Fortran: error recovery on invalid CLASS(), PARAMETER declarations [PR105243]
    
    gcc/fortran/ChangeLog:
    
            PR fortran/103137
            PR fortran/103138
            PR fortran/103693
            PR fortran/105243
            * decl.cc (gfc_match_data_decl): Reject CLASS entity declaration
            when it is given the PARAMETER attribute.
    
    gcc/testsuite/ChangeLog:
    
            PR fortran/103137
            PR fortran/103138
            PR fortran/103693
            PR fortran/105243
            * gfortran.dg/class_58.f90: Fix test.
            * gfortran.dg/class_73.f90: New test.
    
    Co-authored-by: Steven G. Kargl <kargl@gcc.gnu.org>
Comment 10 GCC Commits 2022-07-03 19:44:01 UTC
The releases/gcc-12 branch has been updated by Harald Anlauf <anlauf@gcc.gnu.org>:

https://gcc.gnu.org/g:d870ce1a112c0cbdff6172346a4a164503d92573

commit r12-8544-gd870ce1a112c0cbdff6172346a4a164503d92573
Author: Harald Anlauf <anlauf@gmx.de>
Date:   Wed Jun 29 21:36:17 2022 +0200

    Fortran: error recovery on invalid CLASS(), PARAMETER declarations [PR105243]
    
    gcc/fortran/ChangeLog:
    
            PR fortran/103137
            PR fortran/103138
            PR fortran/103693
            PR fortran/105243
            * decl.cc (gfc_match_data_decl): Reject CLASS entity declaration
            when it is given the PARAMETER attribute.
    
    gcc/testsuite/ChangeLog:
    
            PR fortran/103137
            PR fortran/103138
            PR fortran/103693
            PR fortran/105243
            * gfortran.dg/class_58.f90: Fix test.
            * gfortran.dg/class_73.f90: New test.
    
    Co-authored-by: Steven G. Kargl <kargl@gcc.gnu.org>
    (cherry picked from commit 4c233cabbe388a6b8957c1507e129090e9267ceb)
Comment 11 GCC Commits 2022-07-03 20:13:45 UTC
The releases/gcc-11 branch has been updated by Harald Anlauf <anlauf@gcc.gnu.org>:

https://gcc.gnu.org/g:5c293d9abc4b14e987a574fc11666809a2b8b8da

commit r11-10107-g5c293d9abc4b14e987a574fc11666809a2b8b8da
Author: Harald Anlauf <anlauf@gmx.de>
Date:   Wed Jun 29 21:36:17 2022 +0200

    Fortran: error recovery on invalid CLASS(), PARAMETER declarations [PR105243]
    
    gcc/fortran/ChangeLog:
    
            PR fortran/103137
            PR fortran/103138
            PR fortran/103693
            PR fortran/105243
            * decl.c (gfc_match_data_decl): Reject CLASS entity declaration
            when it is given the PARAMETER attribute.
    
    gcc/testsuite/ChangeLog:
    
            PR fortran/103137
            PR fortran/103138
            PR fortran/103693
            PR fortran/105243
            * gfortran.dg/class_58.f90: Fix test.
            * gfortran.dg/class_73.f90: New test.
    
    Co-authored-by: Steven G. Kargl <kargl@gcc.gnu.org>
    (cherry picked from commit 4c233cabbe388a6b8957c1507e129090e9267ceb)
Comment 12 GCC Commits 2022-07-03 20:29:49 UTC
The releases/gcc-10 branch has been updated by Harald Anlauf <anlauf@gcc.gnu.org>:

https://gcc.gnu.org/g:290147c4c8e3d9d1f13297b511d3a0afb5e952d4

commit r10-10882-g290147c4c8e3d9d1f13297b511d3a0afb5e952d4
Author: Harald Anlauf <anlauf@gmx.de>
Date:   Wed Jun 29 21:36:17 2022 +0200

    Fortran: error recovery on invalid CLASS(), PARAMETER declarations [PR105243]
    
    gcc/fortran/ChangeLog:
    
            PR fortran/103137
            PR fortran/103138
            PR fortran/103693
            PR fortran/105243
            * decl.c (gfc_match_data_decl): Reject CLASS entity declaration
            when it is given the PARAMETER attribute.
    
    gcc/testsuite/ChangeLog:
    
            PR fortran/103137
            PR fortran/103138
            PR fortran/103693
            PR fortran/105243
            * gfortran.dg/class_58.f90: Fix test.
            * gfortran.dg/class_73.f90: New test.
    
    Co-authored-by: Steven G. Kargl <kargl@gcc.gnu.org>
    (cherry picked from commit 4c233cabbe388a6b8957c1507e129090e9267ceb)
Comment 13 anlauf 2022-07-03 20:31:31 UTC
Fixed on all open branches.  Closing.

Thanks for the report!